--- a/src/main/resources/templates/subInfo.html
+++ b/src/main/resources/templates/subInfo.html
@@ -2,12 +2,26 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
-    <title>Profile</title>
+    <title>SubInfo</title>
 </head>
 <body>
+<table style="margin: auto">
+    <tr>
+        <td>
+            <a th:href="${toAuthorisation}" style="border: solid 1px blue; padding: 3px">Авторизация</a>
+            <a th:href="${toCatalog}" style="border: solid 1px blue; padding: 3px">Каталог</a>
+            <a th:href="${toProfile}" style="border: solid 1px blue; padding: 3px">Профиль</a>
+            <a th:href="${toPay}" style="border: solid 1px blue; padding: 3px">Оплата</a>
+            <a th:href="${toSubscription}" style="border: solid 1px blue; padding: 3px">Подписка</a>
+            <a th:href="${toPenalties}" style="border: solid 1px blue; padding: 3px">Штрафы</a>
+        </td>
+    </tr>
+</table>
 <h2>Каталог библиотеки:</h2>
-<div th:text="${startTime}"></div>
-<div th:text="${endTime}"></div>
-<div th:text="${autoPay}"></div>
+<span>Дата начала подписки: </span>
+<span th:text="${startTime}"></span>
+<br>
+<span>Дата окончания подписки: </span>
+<span th:text="${endTime}"></span>
 </body>
 </html>
